# photo-organizer

./: .gitignore  README.md  analyze_metadata_issues.py  bench_scan.py  photo_catalog_query.py  photo_organizer.py  pyproject.toml  video_report.csv
.github/: copilot-instructions.md
database/: schema.py
organization/: mover.py
photo_organizer/: config.py  core.py  exceptions.py  main.py  models.py  reporting.py
photo_organizer/database/: db.py  ops.py  schema.py
photo_organizer/metadata/: extract.py  linking.py
photo_organizer/organization/: mover.py  rules.py
photo_organizer/scanning/: filesystem.py  hasher.py
tests/: conftest.py  test_analyze_metadata_issues.py  test_database.py  test_metadata.py  test_organization.py  test_photo_catalog_query.py  test_photo_organizer.py  test_reporting.py  test_scanning.py
tools/: check_video_metadata.py  inspect_mediainfo.py
