[project]
name = "photo-organizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "exifread>=3.5.1",
    "imagehash>=4.3.2",
    "pillow>=12.0.0",
    "pymediainfo>=7.0.1",
    "tqdm>=4.67.1",
]

[project.scripts]
photo-organizer = "photo_organizer:main"
photo-catalog-query = "photo_catalog_query:main"
